# ml_cpp_ubuntu

./: CMakeLists.txt  README.md  main.cpp
learn_general/: 1template.cpp  2template.cpp  CMakeLists.txt
learn_general/include/: utils.cpp  utils.h
learn_opencv/: 1imread.cpp  CMakeLists.txt
learn_pybind/: CMakeLists.txt  pybind_example.cpp  test_main.py
learn_pybind/include/: utils.cpp  utils.h
learn_torch/: 1tensor.cpp  2train.cpp  3load.cpp  4mnist_learn.cpp  CMakeLists.txt  main  network.hpp  readme.md
learn_torch_opencv/: 1transfer_img_tensor.cpp  CMakeLists.txt
utils/: utils.h
